Move authentication to Vast services